# karva

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  justfile  pyproject.toml  seal.toml  search.json  sitemap.xml  zensical.toml
.config/: nextest.toml
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml
.github/actions/post-primer-comment/: action.yml
.github/workflows/: ci.yml  primer-comment.yml  primer.yml
.karva_cache/run-1776445309804/worker-0/: durations.json  stats.json
.karva_cache/run-1776445492867/worker-0/: durations.json  stats.json
cli/: index.html
configuration/: index.html
crates/karva/: Cargo.toml
crates/karva/src/: lib.rs  utils.rs  version.rs  watch.rs
crates/karva/src/commands/: mod.rs  show_config.rs  version.rs
crates/karva/src/commands/cache/: clean.rs  mod.rs  prune.rs
crates/karva/src/commands/snapshot/: accept.rs  delete.rs  mod.rs  pending.rs  prune.rs  reject.rs  review.rs
crates/karva/src/commands/test/: mod.rs  watch.rs
crates/karva/tests/it/: async.rs  async_tests.rs  basic.rs  cancel.rs  coverage.rs  durations.rs  filterset.rs  help.rs  last_failed.rs  main.rs  name_filter.rs  partition.rs  requirements.txt  run_ignored.rs  show_config.rs  skip_filter.rs  version.rs  watch.rs
crates/karva/tests/it/common/: mod.rs
crates/karva/tests/it/configuration/: mod.rs  overrides.rs  profile.rs  required_version.rs  test_groups.rs
crates/karva/tests/it/discovery/: edge_cases.rs  git_boundary.rs  mod.rs  nested_layouts.rs
crates/karva/tests/it/extensions/: functions.rs
crates/karva/tests/it/snapshots/: it__basic__max_fail_all_runs_every_test.snap  (+2 more)
crates/karva_benchmark/: Cargo.toml
crates/karva_benchmark/benches/: karva_benchmark_walltime.rs
crates/karva_benchmark/src/: lib.rs  real_world_projects.rs  walltime.rs
crates/karva_cache/: Cargo.toml
crates/karva_cache/src/: artifact.rs  cache.rs  hash.rs  lib.rs
crates/karva_cli/: Cargo.toml
crates/karva_cli/src/: cache.rs  enums.rs  lib.rs  partition.rs  show_config.rs  snapshot.rs  test.rs  verbosity.rs
crates/karva_collector/src/: lib.rs  models.rs  parametrize.rs
crates/karva_combine/src/: lib.rs
crates/karva_coverage/: Cargo.toml
crates/karva_coverage/src/: data.rs  executable.rs  lib.rs  report.rs  tracer.rs
crates/karva_dev/: Cargo.toml
crates/karva_dev/src/: generate_cli_reference.rs  generate_env_vars.rs  generate_options.rs  main.rs
crates/karva_diagnostic/: Cargo.toml
crates/karva_diagnostic/src/: lib.rs  reporter.rs  result.rs  traceback.rs
crates/karva_diagnostic/src/result/: flaky.rs  kind.rs  mod.rs  stats.rs
crates/karva_logging/: Cargo.toml
crates/karva_logging/src/: lib.rs  printer.rs  progress.rs  status_level.rs  time.rs  verbosity.rs
crates/karva_metadata/: Cargo.toml
crates/karva_metadata/src/: filter.rs  lib.rs  max_fail.rs  options.rs  pyproject.rs  settings.rs  test_groups.rs
crates/karva_metadata/src/options/: config.rs  mod.rs  overrides.rs
crates/karva_project/: Cargo.toml
crates/karva_project/src/: lib.rs
crates/karva_project/src/path/: mod.rs  test_path.rs  utils.rs
crates/karva_python/: Cargo.toml
crates/karva_python/src/: lib.rs
crates/karva_python_semantic/: Cargo.toml
crates/karva_python_semantic/src/: function_kind.rs  lib.rs  name.rs
crates/karva_runner/: Cargo.toml
crates/karva_runner/src/: binary.rs  collection.rs  coverage.rs  lib.rs  orchestration.rs  partition.rs  progress.rs  worker_args.rs
crates/karva_snapshot/src/: cmd.rs  diff.rs  format.rs  inline.rs  review.rs  storage.rs
crates/karva_static/src/: lib.rs
crates/karva_test_semantic/: Cargo.toml
crates/karva_test_semantic/src/: collection.rs  context.rs  coverage.rs  coverage_tracer.py  diagnostic.rs  lib.rs  py_attach.rs  python.rs  utils.rs
crates/karva_test_semantic/src/diagnostic/: metadata.rs
crates/karva_test_semantic/src/discovery/: discoverer.rs  mod.rs  visitor.rs
crates/karva_test_semantic/src/discovery/models/: function.rs  module.rs  package.rs
crates/karva_test_semantic/src/extensions/fixtures/: finalizer.rs  mod.rs  normalized_fixture.rs  python.rs  scope.rs  traits.rs
crates/karva_test_semantic/src/extensions/fixtures/builtins/: caplog.rs  capsys.rs  mock_env.rs  mod.rs  recwarn.rs  temp_path.rs
crates/karva_test_semantic/src/extensions/functions/: mod.rs  python.rs  snapshot.rs
crates/karva_test_semantic/src/extensions/tags/: custom.rs  expect_fail.rs  mod.rs  parametrize.rs  python.rs  skip.rs  timeout.rs  use_fixtures.rs
crates/karva_test_semantic/src/runner/: finalizer_cache.rs  fixture_cache.rs  fixture_resolver.rs  mod.rs  package_runner.rs  scoped_storage.rs  test_iterator.rs
crates/karva_version/: Cargo.toml
crates/karva_version/src/: lib.rs
crates/karva_worker/src/: cli.rs
docs/: cli.md  configuration.md  env-vars.md  profiles.md  tutorial.md
docs/configuration/: configuration.md  profiles.md
docs/get-started/: installation.md  tutorial.md
docs/reference/: cli.md  env-vars.md
docs/usage/: filtering.md  parallel.md  retries.md  slow-tests.md  watch.md
docs/usage/failure-handling/: fail-fast.md  retries.md  slow-tests.md
docs/usage/fixtures/: builtin.md
docs/usage/running-tests/: cache.md  filtering.md  parallel.md
docs/usage/tags/: parametrize.md  timeout.md
docs/usage/writing-tests/: coverage.md  functions.md  snapshots.md
installation/: index.html
profiles/: index.html
python/karva/: __init__.py  _builtins.py
python/karva/_karva/: __init__.pyi  tags.pyi
python/karva/_vendor/: README.md  __init__.py  _pytest_monkeypatch.py  _pytest_pathlib.py  _pytest_recwarn.py  _pytest_tmpdir.py
scripts/: primer.py
stylesheets/: extra.css
tutorial/: index.html
usage/filtering/: index.html
usage/fixtures/builtin/: index.html
usage/fixtures/fixtures/: index.html
usage/functions/: index.html
usage/snapshots/: index.html
usage/tags/expect_fail/: index.html
usage/tags/parametrize/: index.html
usage/tags/skip/: index.html
(+30 files in other folders)
