[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/MatthewMckee4/karva"
documentation = "https://github.com/MatthewMckee4/karva"
repository = "https://github.com/MatthewMckee4/karva"
authors = ["Matthew Mckee <matthewmckee04@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
karva = { path = "crates/karva" }
karva_cache = { path = "crates/karva_cache" }
karva_cli = { path = "crates/karva_cli" }
karva_collector = { path = "crates/karva_collector" }
karva_combine = { path = "crates/karva_combine" }
karva_coverage = { path = "crates/karva_coverage" }
karva_diagnostic = { path = "crates/karva_diagnostic" }
karva_logging = { path = "crates/karva_logging" }
karva_macros = { path = "crates/karva_macros" }
karva_metadata = { path = "crates/karva_metadata" }
karva_project = { path = "crates/karva_project" }
karva_python_semantic = { path = "crates/karva_python_semantic" }
karva_runner = { path = "crates/karva_runner" }
karva_snapshot = { path = "crates/karva_snapshot" }
karva_static = { path = "crates/karva_static" }
karva_test_semantic = { path = "crates/karva_test_semantic" }
karva_version = { path = "crates/karva_version" }
karva_worker = { path = "crates/karva_worker" }

anyhow = { version = "1.0.102" }
argfile = { version = "1.0.0" }
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
codspeed-criterion-compat = { version = "4.3.0", default-features = false }
colored = { version = "3.1.1" }
console = { version = "0.16" }
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.2" }
directories = "6.0.0"
divan = { package = "codspeed-divan-compat", version = "4.3.0" }
dunce = { version = "1.0.5" }
fastrand = { version = "2.4" }
fs4 = { version = "1.0" }
globset = { version = "0.4" }
ignore = { version = "0.4.25" }
insta = { version = "1.47.1" }
insta-cmd = { version = "0.6.0" }
itertools = { version = "0.14.0" }
markdown = { version = "1.0.0" }
notify-debouncer-mini = { version = "0.7" }
pretty_assertions = { version = "1.4.1" }
proc-macro2 = { version = "1.0.106" }
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
quote = { version = "1.0.45" }
regex = { version = "1.12.3" }
rstest = { version = "0.26" }
ruff_db = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_macros = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_notebook = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_options_metadata = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
similar = { version = "3.0", features = ["inline"] }
syn = { version = "2.0.117" }
tempfile = "3.25"
terminal_size = { version = "0.4" }
thiserror = { version = "2.0.18" }
toml = { version = "1.1.2" }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
tracing-flame = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tracing-tree = { version = "0.4.1" }
uuid = { version = "1.21", features = ["v4"] }
which = { version = "8.0" }
wild = { version = "2" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(codspeed)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

must_use_candidate = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
collapsible_if = "allow"
