[package]
name = "karva_benchmark"
version = "0.0.0"
description = "Karva Benchmarks"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
divan = { workspace = true }
karva_cli = { workspace = true }
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_runner = { workspace = true }
karva_static = { workspace = true }
ruff_python_ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "karva_benchmark_walltime"
harness = false

[lints]
workspace = true
