[package]
name = "karva_cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_version = { workspace = true }

camino = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "string", "env"] }
ruff_db = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
