[package]
name = "karva_dev"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
karva_cli = { workspace = true }
karva_metadata = { workspace = true }
karva_static = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "env"] }
itertools = { workspace = true }
markdown = { workspace = true }
pretty_assertions = { workspace = true }
ruff_options_metadata = { workspace = true }
