[package]
name = "karva_runner"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_cache = { workspace = true }
karva_cli = { workspace = true }
karva_collector = { workspace = true }
karva_coverage = { workspace = true }
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_static = { workspace = true }
karva_version = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
colored = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
fastrand = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
